# SentinalXDR

./: .env.production.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: agents.py  alerts.py  attack_chains.py  audit_logs.py  auth.py  dashboard.py  detections.py  events.py  evidence.py  health.py  incidents.py  reports.py
backend/app/core/: config.py  security.py
backend/app/db/: mongodb.py  redis.py
backend/app/models/: agent.py  alert.py  attack_chain.py  audit_log.py  auth.py  detection.py  event.py  evidence.py  incident.py  organization.py  user.py
backend/app/repositories/: agents.py  alerts.py  attack_chains.py  audit_logs.py  dashboard.py  detections.py  events.py  evidence.py  incidents.py  organizations.py  users.py
backend/app/schemas/: agents.py  alerts.py  attack_chains.py  audit_logs.py  auth.py  dashboard.py  detections.py  events.py  evidence.py  incidents.py
backend/app/services/: attack_chain_engine.py  audit_service.py  dashboard_service.py  detection_engine.py  incident_engine.py  report_service.py
backend/tests/: test_agents.py  test_audit.py  test_auth.py  test_config.py  test_dashboard.py  test_events.py  test_evidence.py  test_health.py  test_reports.py
docs/: API_CONTRACTS.md  ARCHITECTURE.md  BACKUP_RESTORE.md  DATABASE_SCHEMA.md  DEMO_SCRIPT.md  (+16 more)
(+94 files in other folders)
