[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelxdr-backend"
version = "0.1.0"
description = "SentinelXDR FastAPI backend foundation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "motor>=3.6,<4.0",
    "redis>=5.0,<6.0",
    "pydantic-settings>=2.4,<3.0",
    "email-validator>=2.2,<3.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt>=4.0,<5.0",
    "PyJWT>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "httpx2>=2.3,<3.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []
